--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pokedex</title>
+        <title>Pokédex</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Pokedex</h1>
+        <h1>Pokédex</h1>
+        <div id="pokedex"></div>
+        <div id="paginador"></div>
 
         <script src="js/script.js"></script>
     </body>
