--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     </head>
     <body>
         <h1>Pokédex</h1>
+        <label for="tipo">Filtrar por tipo:</label>
+        <select id="tipo">
+            <option value>Todos</option>
+            <option value="fire">Fuego</option>
+            <option value="water">Agua</option>
+            <option value="grass">Planta</option>
+            <option value="electric">Eléctrico</option>
+            <option value="psychic">Psíquico</option>
+            <option value="rock">Roca</option>
+            <option value="ground">Tierra</option>
+            <option value="ice">Hielo</option>
+            <option value="dragon">Dragón</option>
+            <option value="dark">Siniestro</option>
+            <option value="fairy">Hada</option>
+            <!-- puedes añadir todos los tipos -->
+        </select>
         <div id="pokedex"></div>
         <div id="paginador"></div>
 
