Fix buscador+ colores

--- a/index.html
+++ b/index.html
@@ -7,25 +7,43 @@
     </head>
     <body>
         <h1>Pokédex</h1>
-        <label for="tipo">Filtrar por tipo:</label>
-        <select id="tipo">
-            <option value>Todos</option>
-            <option value="fire">Fuego</option>
-            <option value="water">Agua</option>
-            <option value="grass">Planta</option>
-            <option value="electric">Eléctrico</option>
-            <option value="psychic">Psíquico</option>
-            <option value="rock">Roca</option>
-            <option value="ground">Tierra</option>
-            <option value="ice">Hielo</option>
-            <option value="dragon">Dragón</option>
-            <option value="dark">Siniestro</option>
-            <option value="fairy">Hada</option>
-            <!-- puedes añadir todos los tipos -->
-        </select>
+
+        <!-- Barra de filtros -->
+        <div class="filtros">
+            <label for="tipo">Tipo:</label>
+            <select id="tipo">
+                <option value>Todos</option>
+                <option value="normal">Normal</option>
+                <option value="fire">Fuego</option>
+                <option value="water">Agua</option>
+                <option value="grass">Planta</option>
+                <option value="electric">Eléctrico</option>
+                <option value="ice">Hielo</option>
+                <option value="fighting">Lucha</option>
+                <option value="poison">Veneno</option>
+                <option value="ground">Tierra</option>
+                <option value="flying">Volador</option>
+                <option value="psychic">Psíquico</option>
+                <option value="bug">Bicho</option>
+                <option value="rock">Roca</option>
+                <option value="ghost">Fantasma</option>
+                <option value="dark">Siniestro</option>
+                <option value="dragon">Dragón</option>
+                <option value="steel">Acero</option>
+                <option value="fairy">Hada</option>
+            </select>
+
+            <label for="buscador">Buscar:</label>
+            <input type="text" id="buscador" placeholder="Ej: Pikachu">
+        </div>
+
+        <!-- Contenedor de la Pokédex -->
         <div id="pokedex"></div>
+
+        <!-- Paginador -->
         <div id="paginador"></div>
 
+        <!-- Script principal -->
         <script src="js/script.js"></script>
     </body>
 </html>
