--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@
             <input type="text" id="buscador" placeholder="Ej: Pikachu">
         </div>
 
+        <!-- Paginador superior -->
+        <div id="paginador-top"></div>
+
         <!-- Contenedor de la Pokédex -->
         <div id="pokedex"></div>
 
-        <!-- Paginador -->
-        <div id="paginador"></div>
+        <!-- Paginador inferior -->
+        <div id="paginador-bottom"></div>
 
         <!-- Script principal -->
         <script src="js/script.js"></script>
