--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <!-- Paginador superior -->
         <div id="paginador-top"></div>
 
+        <!-- 🔹 Div de detalle del Pokémon seleccionado -->
+        <div id="detalle"></div>
+
         <!-- Contenedor de la Pokédex -->
         <div id="pokedex"></div>
 
