Cambio tema+visual

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
         <meta charset="UTF-8">
         <title>Pokédex</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" type="image/png" href="img/pokedex.png">
+
     </head>
     <body>
         <header class="pokedex-header">
             <h1>Pokédex Nacional</h1>
+            <button id="toggle-theme">🌙 Cambiar tema</button>
+
             <div class="filtros">
 
                 <input type="text" id="buscador"
