--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <body>
         <header class="pokedex-header">
             <h1>Pokédex Nacional</h1>
-            <button id="toggle-theme">🌙 Cambiar tema</button>
+            <button id="toggle-theme">🌙</button>
 
             <div class="filtros">
 
                 <input type="text" id="buscador"
-                    placeholder="🔍 Buscar Pokémon...">
+                    placeholder="Buscar Pokémon...">
                 <select id="filtro-favoritos">
                     <option value="all">Todos</option>
                     <option value="fav">Favoritos</option>
